Main Theme: Reduce font size of 'About' page title at smaller viewports to prevent clipping.
Fixes #4094.
Props mukesh27, ChantalC, coffee2code.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@8322 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-main/css/components/_about.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-main/css/components/_about.scss
@@ -10,6 +10,10 @@ body.page-template-about {
 			font-size: ms( 12 );
 			line-height: 1;
 			margin: 2rem auto 1rem;
+
+			@include breakpoint( 0, 480px ) {
+				font-size: ms( 10 );
+			}
 		}
 
 		.entry-description {
